<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cornflowerblue"
    android:orientation="vertical"
    android:fontFamily="@font/digital"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Number_1"
        style="@style/deepSkyBlue_Gray_MedAquamarine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/digital"
        android:hint="@string/enter_number_1"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Number_2"
        style="@style/deepSkyBlue_Gray_MedAquamarine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/digital"
        android:hint="@string/enter_number_2"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Result"
        style="@style/sky_blue_sky_blue4_white"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/digital"
        android:hint="@string/result"
        android:inputType="text|numberDecimal"
        tools:targetApi="o" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/digital"
            android:orientation="vertical">

            <Button
                android:id="@+id/Subtraction"
                style="@style/red_black_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital"
                android:text="@string/subtrac" />

            <Button
                android:id="@+id/Division"
                style="@style/red_black_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital"
                android:text="@string/divi" />

            <Button
                android:id="@+id/percentage"
                style="@style/red_black_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital"
                android:text="@string/percent" />

            <Button
                android:id="@+id/LOGxY"
                style="@style/RoyalBlue_Med_Dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital"
                android:text="@string/logx_y" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/addition"
                style="@style/red_black_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital"
                android:text="@string/Add" />

            <Button
                android:id="@+id/Multiplication"
                style="@style/red_black_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital"
                android:text="@string/Multi" />

            <Button
                android:id="@+id/Mod"
                style="@style/red_black_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital"
                android:text="@string/mod" />

            <Button
                android:id="@+id/power"
                style="@style/RoyalBlue_Med_Dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digital"
                android:text="@string/powl" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:fontFamily="@font/digital"
                style="@style/red_black_white"
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                style="@style/red_black_white"
                android:fontFamily="@font/digital"
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                style="@style/red_black_white"
                android:fontFamily="@font/digital"
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                style="@style/RoyalBlue_Med_Dark"
                android:fontFamily="@font/digital"
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                style="@style/red_black_white"
                android:fontFamily="@font/digital"
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                style="@style/red_black_white"
                android:fontFamily="@font/digital"
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                style="@style/red_black_white"
                android:fontFamily="@font/digital"
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                style="@style/RoyalBlue_Med_Dark"
                android:fontFamily="@font/digital"
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>